Add HTMl header structure

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wbpack Exercise</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pokemon Game</title>
 </head>
+
 <body>
-    <h1>Hello webpack!</h1>
+  <header>
+    <nav>
+      <div class="logo-container">Logo</div>
+      <ul class="nav-links">
+        <li>Pokemons</li>
+        <li>About</li>
+      </ul>
+    </nav>
+  </header>
 </body>
+
 </html>
