Add HTML structure footer

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
       </ul>
     </nav>
   </header>
+  <footer>
+    <p>Created by <a href="http://" target="_blank" rel="noopener noreferrer">Gabrielyea</a> and <a href="http://" target="_blank" rel="noopener noreferrer">D4nielJ</a></p>
+  </footer>
 </body>
 
 </html>
