Add styling to cards and pokemon section

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,64 @@
       </ul>
     </nav>
   </header>
+  <main>
+    <section class="home">
+    </section>
+    <section class="pokemons">
+      <div class="pokemon-card">
+        <img alt="pokemon photo">
+        <div class="likes-container">
+          <h2>blbla</h2>
+          <span>heart icon</span>
+          <p>likes</p>
+        </div>
+        <button type="button">Comments</button>
+        <button type="button">Reservations</button>
+      </div>
+      <div class="pokemon-card">
+        <img alt="pokemon photo">
+        <div class="likes-container">
+          <h2>blbla</h2>
+          <span>heart icon</span>
+          <p>likes</p>
+        </div>
+        <button type="button">Comments</button>
+        <button type="button">Reservations</button>
+      </div>
+      <div class="pokemon-card">
+        <img alt="pokemon photo">
+        <div class="likes-container">
+          <h2>blbla</h2>
+          <span>heart icon</span>
+          <p>likes</p>
+        </div>
+        <button type="button">Comments</button>
+        <button type="button">Reservations</button>
+      </div>
+      <div class="pokemon-card">
+        <img alt="pokemon photo">
+        <div class="likes-container">
+          <h2>blbla</h2>
+          <span>heart icon</span>
+          <p>likes</p>
+        </div>
+        <button type="button">Comments</button>
+        <button type="button">Reservations</button>
+      </div>
+      <div class="pokemon-card">
+        <img alt="pokemon photo">
+        <div class="likes-container">
+          <h2>blbla</h2>
+          <span>heart icon</span>
+          <p>likes</p>
+        </div>
+        <button type="button">Comments</button>
+        <button type="button">Reservations</button>
+      </div>
+    </section>
+    <section class="about"></section>
+     
+  </main>
   <footer>
     <p>Created by <a href="http://" target="_blank" rel="noopener noreferrer">Gabrielyea</a> and <a href="http://" target="_blank" rel="noopener noreferrer">D4nielJ</a></p>
   </footer>
