--- a/src/index.html
+++ b/src/index.html
@@ -20,57 +20,19 @@
   <main>
     <section class="home">
     </section>
-    <section class="pokemons">
-      <div class="pokemon-card">
-        <img alt="pokemon photo">
-        <div class="likes-container">
-          <h2>blbla</h2>
-          <span>heart icon</span>
-          <p>likes</p>
-        </div>
-        <button type="button">Comments</button>
-        <button type="button">Reservations</button>
-      </div>
-      <div class="pokemon-card">
-        <img alt="pokemon photo">
-        <div class="likes-container">
-          <h2>blbla</h2>
-          <span>heart icon</span>
-          <p>likes</p>
-        </div>
-        <button type="button">Comments</button>
-        <button type="button">Reservations</button>
-      </div>
-      <div class="pokemon-card">
-        <img alt="pokemon photo">
-        <div class="likes-container">
-          <h2>blbla</h2>
-          <span>heart icon</span>
-          <p>likes</p>
-        </div>
-        <button type="button">Comments</button>
-        <button type="button">Reservations</button>
-      </div>
-      <div class="pokemon-card">
-        <img alt="pokemon photo">
-        <div class="likes-container">
-          <h2>blbla</h2>
-          <span>heart icon</span>
-          <p>likes</p>
-        </div>
-        <button type="button">Comments</button>
-        <button type="button">Reservations</button>
-      </div>
-      <div class="pokemon-card">
-        <img alt="pokemon photo">
-        <div class="likes-container">
-          <h2>blbla</h2>
-          <span>heart icon</span>
-          <p>likes</p>
-        </div>
-        <button type="button">Comments</button>
-        <button type="button">Reservations</button>
-      </div>
+    <section class="pokemons-section">
+     <template>
+       <div class="pokemon-card">
+         <img alt="pokemon photo">
+         <div class="likes-container">
+           <h2 class="pokemon-name">blbla</h2>
+           <span>heart icon</span>
+           <p>likes</p>
+         </div>
+         <button type="button">Comments</button>
+         <button type="button">Reservations</button>
+       </div>
+     </template>
     </section>
     <section class="about"></section>
      
