Revert "Get and set likes from api"

--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,8 @@
          <img alt="pokemon photo">
          <div class="likes-container">
            <h2 class="pokemon-name">blbla</h2>
-           <span class="like">heart icon</span>
-           <p class="like-text"></p>
+           <span>heart icon</span>
+           <p>likes</p>
          </div>
          <button type="button">Comments</button>
          <button type="button">Reservations</button>
