Update modal styles

--- a/src/index.html
+++ b/src/index.html
@@ -29,14 +29,14 @@
             <span class="like">heart icon</span>
             <p class="like-text"></p>
           </div>
-          <button type="button">Comments</button>
-          <button type="button">Reservations</button>
+          <button class="comments-button" type="button">Comments</button>
+          <button class="reservations-button" type="button">Reservations</button>
         </div>
       </template>
     </section>
 
     <section class="modals">
-      <div class="modal modal--active">
+      <div class="modal">
         <div class="modal__card">
           <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" alt="Pokemon Picture">
           <h2 class="modal__title">Pokemon Name</h2>
