Add close function to modal class

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     <section class="modals">
       <div class="modal">
         <div class="modal__card">
-          <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" alt="Pokemon Picture">
+          <img class="modal__img" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" alt="Pokemon Picture">
           <h2 class="modal__title">Pokemon Name</h2>
           <div class="modal__info">
             <p>Information about the pokemon, like:</p>
@@ -69,6 +69,7 @@
               </li>
             </ul>
           </form>
+          <button type="button" class="modal__close">X</button>
         </div>
       </div>
     </section>
