Add submit data to api in modal

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
             <span class="comments__comment">I'd love to pet it.</span>
             <span class="comment__date">11th March</span>
           </div>
-          <form action="#" method="post">
+          <form class="modal__form" action="#" method="post">
             <h3>Add a comment</h3>
             <ul>
               <li>
