Update modal class for comments

--- a/src/index.html
+++ b/src/index.html
@@ -49,11 +49,13 @@
             </ul>
           </div>
           <h3>Comments <span class="modal__comments-counter">(0)</span></h3>
-          <div class="modal__comments-container">
-            <span class="comments__name">Alex:</span>
-            <span class="comments__comment">I'd love to pet it.</span>
-            <span class="comment__date">11th March</span>
-          </div>
+          <ul class="modal__comments-container">
+            <li>
+              <span class="comments__name">Alex:</span>
+              <span class="comments__comment">I'd love to pet it.</span>
+              <span class="comment__date">11th March</span>
+            </li>
+          </ul>
           <form class="modal__form" action="#" method="post">
             <h3>Add a comment</h3>
             <ul>
