Add route for pokedex

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
           <div class="modal__info">
             <p>Information about the pokemon, like:</p>
             <ul>
-              <li>Type Moves</li>
+              <li class="modal__pkm-desc"></li>
               <li>Abilities Etc.</li>
               <li>Etc.</li>
             </ul>
