Add likes counter

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <nav>
       <div class="logo-container">Logo</div>
       <ul class="nav-links">
-        <li>Pick your delicious pokemon</li>
+        <li class="pokemon-counter">Pick your delicious pokemon</li>
         <li>Make a poke combo!</li>
       </ul>
     </nav>
