Add fontawesome link Might replace icons for customs later

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pokemon Butcher Shop</title>
+  <script src="https://kit.fontawesome.com/d5e3631d2a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
