Update webpack.config.js with content hash for filenames

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-  <header>
+  <header id="header">
     <nav>
-      <div class="logo-container">Logo</div>
+      <div class="logo-container"><a href="#header"><img src="../../assets/logo.png" height="100" width="100" alt="PokeHealth logo"></a></div>
       <ul class="nav-links">
         <li class="pokemon-counter">Pick your delicious pokemon</li>
         <li>Make a poke combo!</li>
