Add styles for navbar logo

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,17 @@
 <body>
   <header id="header">
     <nav>
-      <div class="logo-container"><a href="#header"><img src="./assets/logo.png" height="100" width="100" alt="PokeHealth logo"></a></div>
-      <ul class="nav-links">
-        <li class="pokemon-counter">Pick your delicious pokemon</li>
-        <li>Make a poke combo!</li>
+      <div class="logo-container"><a href="#header"><img src="./assets/logo.png" alt="PokeHealth logo"></a></div>
+      <div class="mobile-hamburguer">
+        <i class="mobile-hamburguer__icon fas fa-volleyball-ball"></i>
+      </div>
+      <ul class="nav-links d-none">
+        <li class="pokemon-counter">Therapists</li>
+        <li>About</li>
       </ul>
     </nav>
   </header>
-  <main>
+  <main class="d-none">
     <section class="home">
     </section>
     <section class="pokemons-section">
