Add styles for home

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,14 @@
       </ul>
     </nav>
   </header>
-  <main class="d-none">
+  <main>
     <section class="home">
+      <h2>Welcome Trainers</h2>
+      <p>Taking care of our health is equally important as adventure</p>
+      <div class="home__logo"><img src="./assets/logo.png" alt="PokeHealth logo"></div>
+      <div class="home__fade"></div>
     </section>
-    <section class="pokemons-section">
+    <section class="pokemons-section d-none">
       <template>
         <div class="pokemon-card">
           <img alt="pokemon photo">
