Start styling of mobile-menu

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <div class="mobile-hamburguer">
         <i class="mobile-hamburguer__icon fas fa-volleyball-ball"></i>
       </div>
-      <ul class="nav-links d-none">
+      <ul class="nav-links">
         <li class="pokemon-counter">Therapists</li>
         <li>About</li>
       </ul>
