Finish styles for menu mobile and change name of variables for main colors

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
         <i class="mobile-hamburguer__icon fas fa-volleyball-ball"></i>
       </div>
       <ul class="nav-links">
-        <li class="pokemon-counter">Therapists</li>
-        <li>About</li>
+        <li class="pokemon-counter"><a href="#pokemons">Therapists</a></li>
+        <li><a href="#about">About</a></li>
       </ul>
     </nav>
   </header>
@@ -28,7 +28,7 @@
       <div class="home__logo"><img src="./assets/logo.png" alt="PokeHealth logo"></div>
       <div class="home__fade"></div>
     </section>
-    <section class="pokemons-section d-none">
+    <section id="pokemons" class="pokemons-section d-none">
       <template>
         <div class="pokemon-card">
           <img alt="pokemon photo">
