--- a/src/index.html
+++ b/src/index.html
@@ -15,32 +15,35 @@
       <div class="mobile-hamburguer">
         <i class="mobile-hamburguer__icon fas fa-volleyball-ball"></i>
       </div>
-      <ul class="nav-links">
+      <ul class="nav-links d-none">
         <li class="pokemon-counter"><a href="#pokemons">Therapists</a></li>
         <li><a href="#about">About</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <section class="home">
+    <section class="home d-none">
       <h2>Welcome Trainers</h2>
       <p>Taking care of our health is equally important as adventure</p>
       <div class="home__logo"><img src="./assets/logo.png" alt="PokeHealth logo"></div>
       <div class="home__fade"></div>
     </section>
-    <section id="pokemons" class="pokemons-section d-none">
+    <section id="pokemons" class="pokemons-section">
       <template>
         <div class="pokemon-card">
-          <img alt="pokemon photo">
+          <h2 class="pokemon-name">Pikachu</h2>
+          <img class="pokemon-img" alt="pokemon photo">
+          <div class="pokemon-shadow"></div>
           <div class="likes-container">
-            <h2 class="pokemon-name">blbla</h2>
+            <p class="like-text"></p>
             <button class="like-btn">
               <span class="heart-icon"></span>
             </button>
-            <p class="like-text"></p>
           </div>
-          <button class="comments-button" type="button">Comments</button>
-          <button class="reservations-button" type="button">Reservations</button>
+          <div class="buttons-container">
+            <button class="comments-button" type="button">COMMENTS</button>
+            <button class="reservations-button" type="button">RESERVATIONS</button>
+          </div>
         </div>
       </template>
     </section>
