--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pokemon Butcher Shop</title>
   <script src="https://kit.fontawesome.com/d5e3631d2a.js" crossorigin="anonymous"></script>
-<script defer src="main.545b27a570df31e034ef.js"></script></head>
+<script defer src="main.4300907cc50cfc128e24.js"></script></head>
 
 <body>
   <header id="header">
@@ -22,7 +22,7 @@
     </nav>
   </header>
   <main>
-    <section class="home">
+    <section class="home d-none">
       <h2>Welcome Trainers</h2>
       <p>Taking care of our health is equally important as adventure</p>
       <div class="home__logo"><img src="e5a8188c1ea9871a5d82.png" alt="PokeHealth logo"></div>
@@ -32,7 +32,7 @@
       <template>
         <div class="pokemon-card">
           <h2 class="pokemon-name">Pikachu</h2>
-          <img class="pokemon-img" alt="pokemon photo">
+          <img class="pokemon-img loading" alt="Pokemon sprite">
           <div class="pokemon-shadow"></div>
           <div class="likes-container">
             <p class="like-text"></p>
