Fix overflow for modal

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <script src="https://kit.fontawesome.com/d5e3631d2a.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="overflow-none">
   <header id="header">
     <nav>
       <div class="logo-container"><a href="#header"><img src="./assets/logo.png" alt="PokeHealth logo"></a></div>
@@ -59,8 +59,10 @@
             </div>
           </hgroup>
           <img class="modal__img" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" alt="Pokemon Picture">
+          <div class="pokemon-shadow"></div>
           <div class="modal__info">
             <ul>
+              <li class="modal__pkm-desc-title">Pokedex Entry:</li>
               <li class="modal__pkm-desc">Pokedex Description</li>
             </ul>
           </div>
