--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pokemon Butcher Shop</title>
   <script src="https://kit.fontawesome.com/d5e3631d2a.js" crossorigin="anonymous"></script>
-<script defer src="main.4300907cc50cfc128e24.js"></script></head>
+<script defer src="main.88aa21f10785946c0064.js"></script></head>
 
 <body>
   <header id="header">
@@ -32,7 +32,10 @@
       <template>
         <div class="pokemon-card">
           <h2 class="pokemon-name">Pikachu</h2>
-          <img class="pokemon-img loading" alt="Pokemon sprite">
+          <div class="img-container"> 
+            <img class="pokemon-img" alt="Pokemon sprite">
+          </div>
+          <div class="overlay loading"></div>
           <div class="pokemon-shadow"></div>
           <div class="likes-container">
             <p class="like-text"></p>
@@ -51,7 +54,8 @@
     <section class="modals">
       <div class="modal">
         <div class="modal__card">
-          <img class="modal__img" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" alt="Pokemon Picture">
+          <img class="modal__img" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+            alt="Pokemon Picture">
           <h2 class="modal__title">Pokemon Name</h2>
           <div class="modal__info">
             <ul>
@@ -78,7 +82,8 @@
                 <input name="user_name" id="user_name" type="text" placeholder="Write your name here:" required>
               </li>
               <li>
-                <textarea name="user_message" id="user_message" placeholder="Write your comment here:" cols="30" rows="10" maxlength="500" required></textarea>
+                <textarea name="user_message" id="user_message" placeholder="Write your comment here:" cols="30"
+                  rows="10" maxlength="500" required></textarea>
               </li>
               <li>
                 <button type="submit">Comment</button>
@@ -94,7 +99,8 @@
 
   </main>
   <footer>
-    <p>Created by <a href="http://" target="_blank" rel="noopener noreferrer">Gabrielyea</a> and <a href="http://" target="_blank" rel="noopener noreferrer">D4nielJ</a></p>
+    <p>Created by <a href="http://" target="_blank" rel="noopener noreferrer">Gabrielyea</a> and <a href="http://"
+        target="_blank" rel="noopener noreferrer">D4nielJ</a></p>
   </footer>
 </body>
 
