--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
   <header id="header">
     <nav>
       <div class="logo-container"><a href="#header"><img src="./assets/logo.png" alt="PokeHealth logo"></a></div>
-      <div class="mobile-hamburguer">
-        <i class="mobile-hamburguer__icon fas fa-volleyball-ball"></i>
+      <div class="mobile-hamburger">
+        <i class="mobile-hamburger__icon fas fa-volleyball-ball"></i>
       </div>
       <ul class="nav-links d-none">
-        <li class="pokemon-counter"><a href="#pokemons">Therapists</a></li>
+        <li><a class="pokemon-link" href="#pokemons">Therapists</a><span class="pokemon-counter">(0)</span></li>
         <li><a href="#about">About</a></li>
       </ul>
     </nav>
