Remove hardcoded li from comments in modal

--- a/src/index.html
+++ b/src/index.html
@@ -68,13 +68,7 @@
           </div>
           <h3 class="modal__comments-title">Comments <span class="modal__comments-counter">(0)</span></h3>
           <ul class="modal__comments-container">
-            <li>
-              <div>
-                <span class="comments__name">Alex:</span>
-                <span class="comments__comment">I'd love to pet it.</span>
-              </div>
-              <span class="comments__date">11th March</span>
-            </li>
+            <!-- created dinamycally with JS  -->
           </ul>
           <form class="modal__form" action="#" method="post">
             <h3 class="modal__comments-title">Add a comment</h3>
