Add pokeball animations

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <nav>
       <div class="logo-container"><a href="#header"><img src="./assets/logo.png" alt="PokeHealth logo"></a></div>
       <div class="mobile-hamburger">
-        <i class="mobile-hamburger__icon fas fa-volleyball-ball"></i>
+        <span class="pokeball-icon"></span>
       </div>
       <ul class="nav-links d-none">
         <li><a class="portal-link" href="#portal">Portal</a></li>
