Add desktop styles for home

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <div class="mobile-hamburger">
         <i class="mobile-hamburger__icon fas fa-volleyball-ball"></i>
       </div>
-      <ul class="nav-links d-none">
+      <ul class="nav-links">
         <li><a class="pokemon-link" href="#pokemons">Therapists</a><span class="pokemon-counter">(0)</span></li>
         <li><a href="#about">About</a></li>
       </ul>
