Add desktop styles for pokemons page

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     </nav>
   </header>
   <main>
-    <section class="home">
+    <section class="home d-none">
       <h2>Welcome Trainers</h2>
       <p>Taking care of our health is equally important as adventure</p>
       <div class="home__logo"><img src="./assets/logo.png" alt="PokeHealth logo"></div>
