--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <div class="mobile-hamburger">
         <span class="pokeball-icon"></span>
       </div>
-      <ul class="nav-links d-none">
+      <ul class="nav-links nav-links-mobile">
         <li><a class="portal-link" href="#portal">Portal</a></li>
         <li><a class="pokemon-link" href="#pokemons">Therapists<span class="pokemon-counter">(0)</span></a></li>
         <li><a href="#about">About</a></li>
