Add small improvements to the UI

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pokemon Butcher Shop</title>
+  <title>PokeH</title>
   <script src="https://kit.fontawesome.com/d5e3631d2a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -16,7 +16,7 @@
         <span class="pokeball-icon"></span>
       </div>
       <ul class="nav-links nav-links-mobile">
-        <li><a class="portal-link" href="#portal">Portal</a></li>
+        <li><a class="portal-link" href="#portal">Home</a></li>
         <li><a class="pokemon-link" href="#pokemons">Therapists<span class="pokemon-counter">(0)</span></a></li>
         <li><a href="#about">About</a></li>
       </ul>
