--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
 
     <section class="modals">
       <div class="modal">
-        <div class="modal__card">
+        <div class="modal__card d-none">
           <hgroup>
             <h2 class="modal__title">Pokemon Name</h2>
             <div class="modal__pkm-types">
@@ -78,7 +78,7 @@
             <h3 class="modal__comments-title">Add a comment</h3>
             <ul>
               <li>
-                <label class="d-none" for="user_name">Write your name here:</label>
+                <label for="user_name">Write your name here:</label>
                 <input name="user_name" id="user_name" type="text" placeholder="Write your name here:" required>
               </li>
               <li>
@@ -90,6 +90,9 @@
             </ul>
           </form>
           <button type="button" class="modal__close"><i class="fas fa-times"></i></button>
+        </div>
+        <div class="loading-img">
+          <span class="psyduck-img"></span>
         </div>
       </div>
     </section>
