Fixed modal comments, Submit comments now work properly

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
                 <textarea name="user_message" id="user_message" placeholder="Write your comment here:" cols="30" rows="5" maxlength="500" required></textarea>
               </li>
               <li>
-                <button type="submit">COMMENT</button>
+                <button class="submit-btn" type="submit">COMMENT</button>
               </li>
             </ul>
           </form>
