Fix broken links and linter error

--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
     <section class="about"></section>
   </main>
   <footer>
-    <p>Created by <a href="http://" target="_blank" rel="noopener noreferrer">Gabrielyea</a> and <a href="http://"
+    <p>Created by <a href="https://github.com/gabrielyea" target="_blank" rel="noopener noreferrer">Gabrielyea</a> and <a href="https://github.com/D4nielJ"
         target="_blank" rel="noopener noreferrer">D4nielJ</a></p>
   </footer>
 </body>
