--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#" >
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="image" property="og:image" content="https://raw.githubusercontent.com/gabrielyea/pokemon-capstone/main/src/assets/screenshot.png" />
   <title>PokeH</title>
   <script src="https://kit.fontawesome.com/d5e3631d2a.js" crossorigin="anonymous"></script>
 <script defer src="main.5cab93dac22c1efbaa59.js"></script></head>
